# Alexa_mini

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/models/: intent_model.pkl  vectorizer.pkl
modules/: action_handler.py  audio_handler.py  conversation_manager.py  intent_classifier.py  text_to_speech.py
