[project]
name = "alexa-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-speech>=1.48.2",
    "faster-whisper>=1.2.1",
    "gtts>=2.5.4",
    "openai-whisper>=20250625",
    "pandas==2.1.4",
    "pyaudio>=0.2.14",
    "pyautogui==0.9.54",
    "pygame>=2.6.1",
    "pyttsx3==2.90",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "sounddevice==0.4.6",
    "speechrecognition>=3.15.2",
]
