[project]
name = "alexa-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audio-recorder-streamlit==0.0.8",
    "azure-cognitiveservices-speech>=1.48.2",
    "faster-whisper>=1.2.1",
    "gtts==2.4.0",
    "numpy==1.26.2",
    "openai-whisper>=20250625",
    "pandas==2.1.4",
    "pyaudio==0.2.14",
    "pyautogui==0.9.54",
    "pygame==2.5.2",
    "python-dateutil==2.8.2",
    "pyttsx3==2.90",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "sounddevice==0.4.6",
    "speechrecognition==3.10.0",
    "streamlit==1.29.0",
]
